Fix sortable table hover colours in dark mode
The default stylesheet doesn't consider dark mode as an option, so we've
taken over complete responsibility for the CSS for this.

I've essentially copied it, stripped it down to what we use, and added
SCSS variables which are overridden in the alternate stylesheet.

--- a/resources/scss/_common.scss
+++ b/resources/scss/_common.scss
@@ -18,6 +18,9 @@ $font-size-base: 0.9rem;
 
 $overflows: auto, hidden, visible;
 
+$sortabletable-marker: #ccc !default;
+$sortabletable-hover: #efefef !default;
+
 @import "../../vendor/twbs/bootstrap/scss/bootstrap";
 @import "_viewRequest.scss";
 @import "_login.scss";
@@ -25,6 +28,7 @@ $overflows: auto, hidden, visible;
 @import "_password.scss";
 @import "_spacing.scss";
 @import "_sitenotice.scss";
+@import "_sortableTables.scss";
 
 
 span.twitter-typeahead {
